[package]
name = "example"
version = "0.1.0"
authors = ["Timur Shemsedinov <timur.shemsedinov@gmail.com>"]
edition = "2021"
repository = "https://github.com/HowProgrammingWorks/WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async"] }
napi-derive = "2"

[build-dependencies]
napi-build = "1"
